Thu May 13 10:53:24 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/orpostlist.cc: Correct some debugging lines.

Thu May 13 09:57:12 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/xorpostlist.cc,matcher/xorpostlist.h: Pass a minweight
	  value of 0 to children of XOR postlists, because we need to know
	  about all matching documents from the children even if they have
	  a low weight.
	* tests/api_backend.cc: Regression test for this: xordecay1.

Thu May 13 08:47:22 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/soaktest/soaktest_queries.cc: Add more code comments,
	  increase the number of repetitions from 100 to 10000, remove
	  accidentally added semicolons after some braces, remove "return
	  false" at end of test which was added for debugging purposes,
	  clear tout before testing each query, and display the query
	  number, the query, and the msets in the event of failure.

Tue May 11 10:16:05 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/soaktest/soaktest_queries.cc: Don't fail for empty result
	  sets.

Tue May 11 10:13:08 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/soaktest/: Add a "soaktest" testsuite, intended to contain
	  long-running tests with random data.  Currently contains a single
	  test which builds and runs random queries, checking that the
	  results returned are consistent when asking for different result
	  ranges.

Mon May 10 16:57:29 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_opvalue.cc: Add tests for OP_VALUE_RANGE to get
	  coverage of the skip_to() and check() methods of
	  ValueRangePostList.

Mon May 10 16:51:14 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_opvalue.cc: Add a test to get coverage of
	  ValueGePostList::skip_to().

Sun May 09 21:22:50 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_nodb.cc,tests/api_opvalue.cc: Move test "opvaluege1"
	  from api_nodb.cc to api_opvalue.cc, and rename to valuege3 for